container-assessment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muchtodo-ingress
  namespace: muchtodo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: muchtodo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
